add vaibhav's details

--- a/vaibhav/index.html
+++ b/vaibhav/index.html
@@ -3,12 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Kiran Weds Vaibhav</title>
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="../main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Meow+Script&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet" />
   </head>
-  <body></body>
-  <script>
-    (function () {
-      window.location = "/";
-    })();
-  </script>
+  <body>
+    <h1 class="meow-script" style="font-size: 80px">Kiran Weds Vaibhav</h1>
+    <main>
+      <div class="details">
+        <div class="col-4">
+          <h3 class="libre-baskerville-bold">When</h3>
+          <p class="libre-baskerville-regular">December 11<sup>th</sup>, 2024</p>
+          <p class="libre-baskerville-regular">12:28pm</p>
+        </div>
+        <div class="col-4">
+          <img src="./centerpiece-decoration.png" alt="Centerpiece" class="centerpiece">
+        </div>
+        <div class="col-4">
+          <h3 class="libre-baskerville-bold">Where</h3>
+          <p class="libre-baskerville-regular">The Cliff, Forest Trails Township,</p>
+          <p class="libre-baskerville-regular">Mulshi Road, Pune</p>
+        </div>
+      </div>
+      <div class="google-map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.4893712195985!2d73.73866357519135!3d18.506774882584082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bdda1bb63b65%3A0x1086304c96883dc3!2sThe%20Cliff!5e0!3m2!1sen!2sin!4v1728816843657!5m2!1sen!2sin"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+    </main>
+  </body>
+  <script></script>
 </html>
