add kiran's page and some more modifications

--- a/vaibhav/index.html
+++ b/vaibhav/index.html
@@ -10,20 +10,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Meow+Script&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Tiro+Devanagari+Marathi:ital@0;1&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <h1 class="meow-script" style="font-size: 80px">Kiran Weds Vaibhav</h1>
+    <p class="devanagari-regular">॥ श्री गणेशाय नमः॥</p>
+    <h1 class="meow-script" style="font-size: 60px">Kiran Weds Vaibhav</h1>
     <main>
+      <div class="shlok">
+        <div class="side">
+          <p class="devanagari-regular">卐</p>
+        </div>
+        <div class="center">
+          <p class="devanagari-regular">॥ आली समीप लग्नघटिका वधुवरा साधा मुहूर्तास या ॥</p>
+          <p class="devanagari-regular">॥ हातातला पुष्पहार अधिर हो स्कंधी विराजावया ॥</p>
+        </div>
+        <div class="side">
+          <p class="devanagari-regular">卐</p>
+        </div>
+      </div>
       <div class="details">
-        <div class="col-4">
+        <div class="col-4 when">
           <h3 class="libre-baskerville-bold">When</h3>
           <p class="libre-baskerville-regular">December 11<sup>th</sup>, 2024</p>
           <p class="libre-baskerville-regular">12:28pm</p>
         </div>
-        <div class="col-4">
-          <img src="./centerpiece-decoration.png" alt="Centerpiece" class="centerpiece">
+        <div class="col-4 decor">
+          <img src="./centerpiece-decoration.png" alt="Centerpiece" class="centerpiece" />
         </div>
-        <div class="col-4">
+        <div class="col-4 where">
           <h3 class="libre-baskerville-bold">Where</h3>
           <p class="libre-baskerville-regular">The Cliff, Forest Trails Township,</p>
           <p class="libre-baskerville-regular">Mulshi Road, Pune</p>
