add prewedding details

--- a/vaibhav/index.html
+++ b/vaibhav/index.html
@@ -43,6 +43,9 @@
           <p class="libre-baskerville-regular">Mulshi Road, Pune</p>
         </div>
       </div>
+      <div id="prewedding-map">
+        <button>Show location of Sangeet venue</button>
+      </div>
       <div class="google-map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.4893712195985!2d73.73866357519135!3d18.506774882584082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bdda1bb63b65%3A0x1086304c96883dc3!2sThe%20Cliff!5e0!3m2!1sen!2sin!4v1728816843657!5m2!1sen!2sin"
@@ -55,6 +58,27 @@
         ></iframe>
       </div>
     </main>
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <p class="libre-baskerville-bold pb-8">The Sangeet ceremony will be held at:</p>
+        <p class="libre-baskerville-regular">Nisarga Chhaya,</p>
+        <p class="libre-baskerville-regular">Sonterra Studios,</p>
+        <p class="libre-baskerville-regular">Bhugaon, Pune</p>
+        <div class="google-map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4955.586765245282!2d73.74543873721983!3d18.505275100167598!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bdd8f1c4f3ad%3A0xac3cc5bf543c7ae9!2sSonterra%20Studios!5e0!3m2!1sen!2sin!4v1728847914026!5m2!1sen!2sin"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            class="google-map"
+          ></iframe>
+        </div>
+      </div>
+    </div>
   </body>
-  <script></script>
+  <script src="./app.js" defer></script>
 </html>
